<resources>
    <string name="app_name">Driver App</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_address">Customer Address</string>
    <string name="destination">Destination</string>
    <string name="quantity">Quantity</string>
    <string name="capture_location">Capture Location</string>
    <string name="location">Location</string>
    <string name="lr_number">LR Number</string>
    <string name="permission_rationale">Location permission is required as core functionality</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile#</string>
    <string name="bags">Bags#</string>
    <string name="notes">Notes</string>
    <string name="sign">Sign (Click below Image to sign)</string>
    <string name="submit">Submit</string>

    <string name="invoice_details">Invoice Details</string>
    <string name="choose_language">Choose a Language</string>
    <string name="get_started">Get Started</string>
    <string name="required_permission_title">Required Permission</string>
    <string name="accept">Accept</string>
    <string name="close">Close</string>
    <string name="exit" translatable="false">Exit</string>
    <string name="required_permission_message"><![CDATA[We are taking following app permissions to make your experience better.<ul>
    <li>&nbsp;Location to capture last mile delivery point.</li>
    <li>&nbsp;Background Location, even when the app is closed, to provide visibility of orders in transit to our customers.</li>
    <li>&nbsp;Background Location will start after Login the app and will stop on Logout.</li></ul>]]></string>
    <string name="driver_portal">Driver Portal</string>
    <string name="transporter_code">Transporter Code</string>
    <string name="receiver_1">Receiver#1</string>
    <string name="receiver_2">Receiver#2</string>
    <string name="receiver_3">Receiver#3</string>
    <string name="truck_number">Truck Number</string>
    <string name="login">Login</string>
    <string name="our_vision">Our Vision : \"Build Sustainably\"</string>
    <string name="invoice_no">Invoice No.</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="display_lr">Display LR</string>
    <string name="download">Download</string>
    <string name="invoices_for_epod">Invoices for EPOD</string>
    <string name="logout">Logout</string>
    <string name="bags_received">Bags/Qty Received</string>
    <string name="bags_received_for_standard">Bags Received</string>
    <string name="remarks">Remarks (If Any)</string>
    <string name="bags_damage">Shortage/Damage (Bags/Qty)</string>
    <string name="bags_damage_for_standard">Shortage/Damage Bags</string>
    <string name="total_shortage">Total Shortage/Damage(Bag/MT)</string>
    <string name="scan_doc">Scan Documents If any</string>
    <string name="upload_image">Upload Image</string>
    <string name="submit_epod">Submit EPOD</string>
    <string name="cancel">cancel</string>
    <string name="clear">clear</string>

    <string-array name="bags_spinner">
        <item>Bags</item>
        <item>MT</item>
    </string-array>

    <string name="uploading_image">Uploading...</string>
    <string name="uploaded">Uploaded.</string>
    <string name="max_3_allowed">Max 3 Images are allowed</string>
    <string name="field_cant_be_empty">Field can\'t be empty</string>
    <string name="enter_valid_number">Please enter valid mobile number</string>
    <string name="no_records_found">No records found</string>
    <string name="sure_to_complete">Are you sure to complete the Trip?</string>
    <string name="allow">Allow</string>
    <string name="storage_required">Storage permission required to store captured image</string>
    <string name="provide_signature">Please provide Signature</string>
    <string name="enter_shortage">Please enter shortage/damages(fill 0 if no shortage/damage)</string>
    <string name="save_receiver">Save Receiver</string>
    <string name="complete_trip">Complete Trip</string>
    <string name="want_to_complete_trip">I want to complete this trip.</string>
    <string name="load_type">Load Type</string>
    <string name="all_invoices_complete">All Invoices completed, Logging out</string>
    <string name="actual_weightment" translatable="false">Actual Weightment</string>
    <string name="mobile_number" translatable="false">Mobile Number</string>
    <string name="invalid_number" translatable="false">Invalid Number</string>
    <string name="enter_otp" translatable="false">Waiting for OTP</string>
    <string name="title_bags" translatable="false">Bags</string>
    <string name="title_mt" translatable="false">MT</string>
    <string name="timer_message" translatable="false">Resend OTP in %02d:%02d Sec</string>
</resources>