<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.ipssi.orient_epod.ui.main.PageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.main.PlaceholderFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp_20"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="@{viewModel.isEditable}"
                        android:focusableInTouchMode="@{viewModel.isEditable}"
                        android:focusable="@{viewModel.isEditable}"
                        android:singleLine="true"
                        android:text="@={viewModel.name}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_mobile"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:hint="@string/mobile"
                    app:prefixText="+91">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="10"
                        android:clickable="@{viewModel.isEditable}"
                        android:focusableInTouchMode="@{viewModel.isEditable}"
                        android:text="@={viewModel.mobile}"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_bags"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:hint="@string/bags_received">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:clickable="@{viewModel.isEditable}"
                        android:focusableInTouchMode="@{viewModel.isEditable}"
                        android:text="@={viewModel.bagsReceived}"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_damage_bags"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:layout_weight="1.2"
                        android:hint="@string/bags_damage">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:clickable="@{viewModel.isEditable}"
                            android:focusableInTouchMode="@{viewModel.isEditable}"
                            android:text="@={viewModel.damageBags}"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/bags_spinner"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="0.8"
                        android:entries="@array/bags_spinner" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_notes"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:hint="@string/remarks">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:text="@={viewModel.remarks}"
                        android:clickable="@{viewModel.isEditable}"
                        android:focusableInTouchMode="@{viewModel.isEditable}"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/sign"
                    android:textSize="@dimen/sp_14" />

                <ImageView
                    android:id="@+id/sign"
                    android:layout_width="match_parent"
                    android:clickable="@{viewModel.isEditable}"
                    android:focusableInTouchMode="@{viewModel.isEditable}"
                    android:layout_height="100dp"
                    android:background="@color/colorTransparentGreyLight"
                    android:scaleType="centerInside" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btn_submit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:layout_weight="1"
                        android:background="@color/colorGreen"
                        android:gravity="center"
                        android:paddingVertical="10dp"
                        android:text="@string/submit"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/btn_submit_epod"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_weight="1"
                        android:background="@color/colorGreen"
                        android:gravity="center"
                        android:paddingVertical="10dp"
                        android:text="@string/submit_epod"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <TextView
                        android:id="@+id/damage_bags_heading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rectangle_grey"
                        android:padding="5dp"
                        android:text="@string/total_shortage"
                        android:textSize="@dimen/sp_14"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/line"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/colorGreyDark"
                        app:layout_constraintBottom_toBottomOf="@+id/damage_bags_heading"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/damage_bags_heading"
                        app:layout_constraintTop_toTopOf="@+id/damage_bags_heading" />

                    <TextView
                        android:id="@+id/scan_doc_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_25"
                        android:text="@string/scan_doc"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/damage_bags_heading" />

                    <TextView
                        android:id="@+id/btn_capture_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:background="@android:color/black"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="5dp"
                        android:text="@string/upload_image"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="@id/scan_doc_label"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/scan_doc_label" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/image_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_40"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btn_capture_image" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTransparentGreyLight"
            android:clickable="true"
            android:focusable="true"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/progressBar"
                android:layout_centerInParent="true"
                tools:visibility="visible" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>