<?xml version="1.0" encoding="utf-8"?>
<layout>
<data>
    <variable
        name="model"
        type="com.ipssi.orient_epod.model.Invoice" />
</data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".InvoiceDetailsActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/invoice_detail_card_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp"
            app:contentPadding="10dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/invoice_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invoice_no"
                    android:fontFamily="@font/barlow_regular"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/invoice_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:fontFamily="@font/barlow_medium"
                    android:text="@{model.invoiceNumber}"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/barrier1"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/invoice_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingEnd="15dp"
                    android:fontFamily="@font/barlow_regular"
                    android:paddingRight="15dp"
                    android:text="@string/invoice_date"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/invoice_number" />

                <TextView
                    android:id="@+id/invoice_date_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="end"
                    android:text="@{model.invoiceDate}"
                    android:fontFamily="@font/barlow_medium"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/barrier1"
                    app:layout_constraintTop_toBottomOf="@id/invoice_number" />

                <TextView
                    android:id="@+id/customer_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/customer_name"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/sp_14"
                    android:fontFamily="@font/barlow_regular"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/invoice_date_value" />

                <TextView
                    android:id="@+id/customer_name_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="end"
                    android:text="@{model.soldtopartyName}"
                    android:fontFamily="@font/barlow_medium"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/barrier1"
                    app:layout_constraintTop_toBottomOf="@id/invoice_date_value" />

                <TextView
                    android:id="@+id/destination_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/destination"
                    android:fontFamily="@font/barlow_regular"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/customer_name_value" />

                <TextView
                    android:id="@+id/destination_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/barlow_medium"
                    android:gravity="end"
                    android:text="@{model.destinationName}"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintStart_toEndOf="@id/barrier1"
                    app:layout_constraintTop_toBottomOf="@id/customer_name_value" />

                <TextView
                    android:id="@+id/quantity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/quantity"
                    android:fontFamily="@font/barlow_regular"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/destination_value" />

                <TextView
                    android:id="@+id/quantity_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="end"
                    android:text="@{model.invoiceQuantity + ` MT`}"
                    android:fontFamily="@font/barlow_medium"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/destination_value" />

                <TextView
                    android:id="@+id/lr_number_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/display_lr"
                    android:fontFamily="@font/barlow_regular"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/quantity_value" />

                <TextView
                    android:id="@+id/lr_number_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/barlow_medium"
                    android:text="@{model.lrNumber}"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_14"
                    app:drawableStartCompat="@drawable/pdf_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/quantity_value" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:barrierDirection="right"
                    app:constraint_referenced_ids="customer_name_label"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="129dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>